# mw-skypilot-training

./: README.md  pyproject.toml  skypilot-config.yaml
trainer/: cpt_config.yaml  gemma3_cpt_train.py
trainer/util/: commons.py  fileutils.py  gcs_syncer.py
trainer/vertex_vision_model_garden_peft/: deepspeed_zero2_64gpu.yaml  gemma3_fsdp_64gpu.yaml  gemma3_fsdp_8gpu.yaml  gemma3_fsdp_8gpu_mykola.yaml
trainer/vertex_vision_model_garden_peft/tests/: test_util.py
trainer/vertex_vision_model_garden_peft/train/vmg/: callbacks.py  gemma3_cpt_train.py  instruct_lora.py  merge_causal_language_model_lora.py  train_entrypoint.py  train_entrypoint_backup.py  utils.py
